--- a/application.properties
+++ b/application.properties
@@ -6,3 +6,5 @@
 # spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # spring.jpa.hibernate.ddl-auto = update
+
+abc = 5
