--- a/StudentMS.properties
+++ b/StudentMS.properties
@@ -6,3 +6,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto = update
+
+server.port=8080
+
