--- a/StudentMS.properties
+++ b/StudentMS.properties
@@ -7,3 +7,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 spring.jpa.hibernate.ddl-auto = update
 
+eureka.client.service-url.defaultZone=http://localhost:7777/eureka
+
+
